--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
                     type="submit">Calculate</button>
                 <h5>Total Expenses: <button id="expense" class=" border border-1 "></button> </h5>
                 <h5>Balance: <button id="balance" class="border border-1 "></button> </h5>
-                <p>Save: <button class=" px-5 py-2 border border-1 save-style">20</button> % <button
+                <p>Save:<button class="save-style px-5 py-2 border border-1">20</button> % <button id="save"
                         class="button-style px-5 py-2 border border-1">Save</button>
                 </p>
-                <h5>Saving Amount: <button class=" px-5 pb-2 pt-3 border  border-1 "></button> </h5>
-                <h5>Remaining Balance: <button class=" px-5 pb-2 pt-3 border border-1 "></button> </h5>
+                <h5>Saving Amount: <button id="save-amount" class="  border  border-1 "></button> </h5>
+                <h5>Remaining Balance: <button id="remaining-balance" class=" border border-1 "></button>
+                </h5>
             </div>
 
         </div>
